--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node build/index.js",
     "build-server": "tsc --outDir build server/index.ts",
     "watch-server": "tsc -w --outDir build server/index.ts",
-    "build-client": "browserify client/index.ts -p [ tsify --noImplicitAny ] -o public/js/bundle.js",
-    "watch-client": "watchify client/index.ts -p [ tsify --noImplicitAny ] -o public/js/bundle.js",
+    "build-client": "browserify client/index.ts -p [ tsify ] -o public/js/bundle.js",
+    "watch-client": "watchify client/index.ts -p [ tsify ] -o public/js/bundle.js",
     "build": "npm run build-server && npm run build-client",
     "postinstall": "npm run build"
   },
@@ -18,9 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.0.37",
+    "@types/three": "^0.84.27",
     "browserify": "^14.5.0",
     "express": "^4.16.2",
+    "gameloop": "^1.1.4",
     "pug": "^2.0.0-rc.4",
+    "three": "^0.87.1",
     "tsc": "^1.20150623.0",
     "tsify": "^3.0.3",
     "typescript": "^2.5.3"
