--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/express": "^4.0.37",
     "@types/three": "^0.84.27",
+    "arcade_keys": "^2.0.0",
     "browserify": "^14.5.0",
     "express": "^4.16.2",
     "gameloop": "^1.1.4",
